# people-context-mcp

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  glama.json  pyproject.toml  release-please-config.json  server.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  mcp.json  plugin.json
.codex-plugin/: plugin.json
.github/: dependabot.yml  pr26-final-architecture-fix.py  pr26-final-ci-trigger  pr26-fix.py  pr26-merge-ready-trigger  pr26-third-review-trigger
.github/tooling/claude-code/: package-lock.json  package.json
.github/workflows/: apply-pypi-migration.yml  apply-security-hardening.yml  ci.yml  claude-plugin-validate.yml  codeql.yml  codex-plugin-validate.yml  docker-publish.yml  m7-review-fixes-validation.yml  m7-test-import-fix.yml  mcp-registry-validate.yml  mcpb-validate.yml  package-publish.yml  pr26-doc-fixes-pr.yml  pr26-third-review-fixes.yml  release-please.yml  release.yml  scorecard.yml
compat/people-context-mcp/: README.md  pyproject.toml
docs/: architecture.md  claude-code-plugin.md  cli.md  codex-plugin.md  communication-guidance.md  data-model.md  desktop-and-editors.md  docker.md  identity-resolution.md  import.md  mcp-interface.md  mcp-registry.md  openclaw-plugin.md  privacy-and-safety.md  relationship-graph.md  releasing.md  roadmap.md  vault-export.md
docs/decisions/: 0001-python.md  0002-sqlite.md  0003-hexagonal-architecture.md  0004-changelog-vs-audit-log.md  0005-conflict-resolution-strategy.md
docs/design/: sync.md
docs/specs/: m10-agent-utilization.md  m11-sync-bundle-and-bootstrap-restore.md  m12-trust-stability-v1.md  m13-daily-utility.md  m14-ecosystem-interop.md  m15-data-quality-and-credibility.md  m8-distribution-and-reach.md  m9-cold-start-and-onboarding.md  pr-plan.md
mcpb/: manifest.json  pyproject.toml
openclaw-plugin/: README.md  openclaw.plugin.json  package-lock.json  package.json
openclaw-plugin/src/: index.test.ts  index.ts
scripts/: apply_security_hardening.py
skills/people-context-usage/: SKILL.md
skills/remember/: SKILL.md
skills/reminders/: SKILL.md
skills/who/: SKILL.md
src/people_context/: __init__.py  cli.py  demo_seed.py  service.py
src/people_context/adapters/: email_import.py  ics_import.py  import_router.py  linkedin_import.py  model2vec_embeddings.py  runtime.py  semantic_indexing.py  vcard_import.py
src/people_context/app/: __init__.py  _mutation.py  add_alias.py  complete_reminder.py  correct_record.py  edit_person.py  export_data.py  forget.py  get_person_context.py  import_content.py  merge_people.py  record.py  record_fact.py  record_interaction.py  record_observation.py  record_trait.py  resolve_person.py  semantic_search.py  set_affiliation.py  set_communication_philosophy.py  set_relationship.py  set_reminder.py  write_support.py
src/people_context/cli/: __init__.py  main.py  maintenance.py  onboarding.py  parser.py  people.py  portability.py  relationships.py  rendering.py
src/people_context/ports/: __init__.py  changelog.py  context.py  export.py  forget.py  hlc.py  imports.py  lifecycle.py  merge.py  repository.py  semantic.py  unit_of_work.py
tests/: test_architecture.py  test_cli.py  test_cli_onboarding.py  test_codex_plugin.py  test_demo_packaging.py  test_mcpb_bundle.py  test_packaging_metadata.py  test_registry_metadata.py  test_release_automation.py  test_service.py  test_usage_skill.py  test_workflow_skills.py
tests/adapters/: test_agent_staging.py  test_email_import.py  test_followup_fixes.py  test_http_e2e.py  test_ics_import.py  test_import_router.py  test_linkedin_import.py  test_m7_review_regressions.py  test_mcp_server.py  test_model2vec_embeddings.py  test_relationship_graph.py  test_review_fixes.py  test_semantic_index.py  test_sqlite_changelog.py  test_sqlite_context_reader.py  test_sqlite_export.py  test_sqlite_lifecycle.py  test_sqlite_repository.py  test_sqlite_sync_foundations.py  test_sqlite_unit_of_work.py  test_stdio_e2e.py  test_vault_export.py  test_vcard_import.py
tests/adapters/importers/: __init__.py  (+6 more)
tests/app/: fakes.py  test_get_person_context.py  test_m2_writes.py  test_reindex_semantic.py  test_resolve_person.py  test_semantic_search.py
tests/cli/: test_export.py  test_main.py  test_onboarding.py  test_relationships.py
(+106 files in other folders)
