[project]
name = "people-context-mcp"
version = "0.1.0"
description = "Local-first MCP server giving AI agents contextual knowledge about the people in your life"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jinyang Wang" }]
keywords = ["ai-agents", "local-first", "mcp", "model-context-protocol", "personal-context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["mcp>=1.2", "pydantic>=2.7", "python-ulid>=2.2"]

[project.urls]
Homepage = "https://github.com/JinyangWang27/people-context-mcp"
Repository = "https://github.com/JinyangWang27/people-context-mcp"
Issues = "https://github.com/JinyangWang27/people-context-mcp/issues"

[project.optional-dependencies]
semantic = [
    "model2vec>=0.8.2,<0.9",
    "sqlite-vec>=0.1.9,<0.2",
]

[project.scripts]
people-context-mcp = "people_context.adapters.mcp.server:main"
people-context = "people_context.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=8",
    "ruff>=0.6",
    "model2vec>=0.8.2,<0.9",
    "sqlite-vec>=0.1.9,<0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/people_context"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
