[project]
name = "people-context-mcp"
version = "0.1.0.post2"
description = "Compatibility package for the renamed people-context distribution"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jinyang Wang", email = "jinyang.wang27@outlook.com" }]
dependencies = ["people-context>=0.1.0"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/JinyangWang27/people-context"
Repository = "https://github.com/JinyangWang27/people-context"
Issues = "https://github.com/JinyangWang27/people-context/issues"

[project.scripts]
people-context-mcp = "people_context.adapters.mcp.server:main"
people-context = "people_context.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/people_context_mcp_compat"]
